Ported to Forge

--- a/src/main/resources/assets/iris/lang/en_pt.json
+++ b/src/main/resources/assets/iris/lang/en_pt.json
@@ -4,11 +4,11 @@
   "iris.keybind.reload": "Polished yer eyes smooth",
   "iris.keybind.shaderPackSelection": "Glass eye Choosin Screen",
   "iris.keybind.toggleShaders": "Toggle ye special glass",
-  "iris.keybinds": "Yer Iris Wheel bounds",
+  "iris.keybinds": "Yer Oculus Wheel bounds",
   "iris.shaders.reloaded.failure": "Failed to clean ye Glass eyes! Reason: %s",
   "iris.shaders.toggled.failure": "Failed to place ye Glass eyes back in! Reason: %s",
-  "iris.sodium.failure.title": "Iris failed to load!",
-  "iris.sodium.failure.reason": "Yee 'ave Sodium in yer mods folder, however Iris includes it. Please close the game 'n remove Sodium from yer mods Coffer.",
+  "iris.sodium.failure.title": "Oculus failed to load!",
+  "iris.sodium.failure.reason": "Yee 'ave Rubidium in yer mods folder, however Oculus includes it. Please close the game 'n remove Rubidium from yer mods Coffer.",
 
   "options.iris.apply": "Apply",
   "options.iris.refresh": "Refresh",
@@ -30,7 +30,7 @@
 
   "pack.iris.select.title": "Select",
   "pack.iris.list.label": "+ Drop yer Glass eye files in this ole window t' add yer Glass eyes",
-  "iris.sodium.failure.download": "Download Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris needs e' Sodium for smooth sailin', but Sodium ain't found. Find the Sodium, add it to t'mods, and open the game.",
-  "iris.sodium.failure.reason.incompatible": "Iris needs e' Sodium for smooth sailin', but the one here ain't it. Find t'correct Sodium, add it to t'mods, throw overboard t'old one, and open the game."
+  "iris.sodium.failure.download": "Download Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus needs e' Rubidium for smooth sailin', but Rubidium ain't found. Find the Rubidium, add it to t'mods, and open the game.",
+  "iris.sodium.failure.reason.incompatible": "Oculus needs e' Rubidium for smooth sailin', but the one here ain't it. Find t'correct Rubidium, add it to t'mods, throw overboard t'old one, and open the game."
 }
