--- a/src/main/resources/assets/iris/lang/en_us.json
+++ b/src/main/resources/assets/iris/lang/en_us.json
@@ -1,21 +1,16 @@
 {
   "iris.shaders.reloaded": "Shaders Reloaded!",
-  "iris.shaders.disabled": "Shaders disabled!",
   "iris.shaders.toggled": "Toggled shaders to %s!",
-  "iris.shaders.debug.enabled": "Debugging has been enabled, debug logging will be more verbose!",
-  "iris.shaders.debug.disabled": "Debugging has been disabled.",
-  "iris.shaders.debug.failure": "Cannot enable debugging, your computer does not support debug features.",
-  "iris.shaders.debug.restart": "You do not have a debug context, please restart to enable debugging.",
   "iris.keybind.reload": "Reload Shaders",
   "iris.keybind.shaderPackSelection": "Shaderpack Selection Screen",
   "iris.keybind.toggleShaders": "Toggle Shaders",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Failed to reload shaders! Reason: %s",
   "iris.shaders.toggled.failure": "Failed to toggle shaders! Reason: %s",
-  "iris.sodium.failure.title": "Iris failed to load!",
-  "iris.sodium.failure.download": "Download Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris requires Sodium for good performance, but Sodium is not installed. Please download Sodium, place it in your mods folder, and re-launch the game.",
-  "iris.sodium.failure.reason.incompatible": "Iris requires Sodium for good performance, but an incompatible version was found. Please download the correct version of Sodium, place it in your mods folder, remove the incorrect version, and re-launch the game.",
+  "iris.sodium.failure.title": "Oculus failed to load!",
+  "iris.sodium.failure.download": "Download Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus requires Rubidium for good performance, but Rubidium is not installed. Please download Rubidium, place it in your mods folder, and re-launch the game.",
+  "iris.sodium.failure.reason.incompatible": "Oculus requires Rubidium for good performance, but an incompatible version was found. Please download the correct version of Rubidium, place it in your mods folder, remove the incorrect version, and re-launch the game.",
 
   "options.iris.apply": "Apply",
   "options.iris.refresh": "Refresh",
