--- a/src/main/resources/assets/iris/lang/pt_br.json
+++ b/src/main/resources/assets/iris/lang/pt_br.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "Recarregar sombreadores",
   "iris.keybind.shaderPackSelection": "Seleção de pacotes",
   "iris.keybind.toggleShaders": "Alternar sombreadores",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Não foi possível recarregar os sombreadores! Motivo: %s",
   "iris.shaders.toggled.failure": "Não foi possível ativar ou desativar os sombreadores! Motivo: %s",
-  "iris.sodium.failure.title": "Não foi possível carregar o Iris!",
-  "iris.sodium.failure.download": "Baixar Sodium",
-  "iris.sodium.failure.reason.notFound": "O Iris exige o Sodium para maior desempenho, mas o Sodium não está instalado. Baixe o Sodium, coloque-o na pasta de mods e reinicie o jogo.",
-  "iris.sodium.failure.reason.incompatible": "O Iris exige o Sodium para maior desempenho, mas uma versão incompatível foi encontrada. Baixe a versão correta do Sodium, coloque-o na pasta de mods, remova a versão incorreta e reinicie o jogo.",
+  "iris.sodium.failure.title": "Não foi possível carregar o Oculus!",
+  "iris.sodium.failure.download": "Baixar Rubidium",
+  "iris.sodium.failure.reason.notFound": "O Oculus exige o Rubidium para maior desempenho, mas o Rubidium não está instalado. Baixe o Rubidium, coloque-o na pasta de mods e reinicie o jogo.",
+  "iris.sodium.failure.reason.incompatible": "O Oculus exige o Rubidium para maior desempenho, mas uma versão incompatível foi encontrada. Baixe a versão correta do Rubidium, coloque-o na pasta de mods, remova a versão incorreta e reinicie o jogo.",
 
   "options.iris.apply": "Aplicar",
   "options.iris.refresh": "Atualizar",
