--- a/src/main/resources/assets/iris/lang/ru_ru.json
+++ b/src/main/resources/assets/iris/lang/ru_ru.json
@@ -4,19 +4,17 @@
   "iris.keybind.reload": "Перезагрузить шейдеры",
   "iris.keybind.shaderPackSelection": "Экран выбора шейдеров",
   "iris.keybind.toggleShaders": "Переключить шейдеры",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Не удалось перезагрузить шейдеры! Причина: %s",
   "iris.shaders.toggled.failure": "Не удалось переключить шейдеры! Причина: %s",
-  "iris.sodium.failure.title": "Не удалось загрузить Iris!",
-  "iris.sodium.failure.download": "Загрузить Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris требует Sodium для хорошей производительности, но Sodium не установлен. Пожалуйста, загрузите Sodium, добавьте его в папку с модами и перезапустите игру.",
-  "iris.sodium.failure.reason.incompatible": "Iris требует Sodium для хорошей производительности, но ваша версия Sodium несовместима. Пожалуйста, загрузите подходящую версию Sodium, добавьте его в папку с модами, удалите старую версию и перезапустите игру.",
+  "iris.sodium.failure.title": "Не удалось загрузить Oculus!",
+  "iris.sodium.failure.download": "Загрузить Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus требует Rubidium для хорошей производительности, но Rubidium не установлен. Пожалуйста, загрузите Rubidium, добавьте его в папку с модами и перезапустите игру.",
+  "iris.sodium.failure.reason.incompatible": "Oculus требует Rubidium для хорошей производительности, но ваша версия Rubidium несовместима. Пожалуйста, загрузите подходящую версию Rubidium, добавьте его в папку с модами, удалите старую версию и перезапустите игру.",
   
   "options.iris.apply": "Применить",
   "options.iris.refresh": "Обновить",
-  "options.iris.openShaderPackFolder": "Открыть папку c шейдерами",
-  "options.iris.shaderPackSettings": "Настройки шейдеров",
-  "options.iris.shaderPackList": "Список шейдеров",
+  "options.iris.openShaderPackFolder": "Открыть папку c шейдерами...",
   "options.iris.refreshShaderPacks": "Обновить список шейдеров",
   "options.iris.shaderPackSelection": "Пакеты шейдеров...",
   "options.iris.shaderPackSelection.title": "Пакеты шейдеров",
@@ -26,30 +24,12 @@
   "options.iris.shaderPackSelection.failedAddSingle": "\"%s\" не является допустимым пакетом шейдеров",
   "options.iris.shaderPackSelection.copyError": "Не удалось добавить пакет шейдеров \"%s\"",
   "options.iris.shaderPackSelection.copyErrorAlreadyExists": "\"%s\" уже находится в вашей папке с шейдерами!",
-  "options.iris.shaderPackOptions.tooManyFiles": "Невозможно загрузить несколько файлов с настройками!",
-  "options.iris.shaderPackOptions.failedImport": "Не удалось загрузить настройки шейдеров из \"%s\"",
-  "options.iris.shaderPackOptions.importedSettings": "Загружены настройки шейдеров из \"%s\"",
   "options.iris.shaders.disabled": "Шейдеры: Выключены",
   "options.iris.shaders.enabled": "Шейдеры: Включены",
-  "options.iris.shaders.nonePresent": "Шейдеры: пакетов не обнаружено",
-  "options.iris.back": "Назад",
-  "options.iris.reset": "Сбросить",
-  "options.iris.reset.tooltip": "Сбросить ВСЕ параметры?",
-  "options.iris.reset.tooltip.holdShift": "Для сброса нажмите, удерживая Shift",
-  "options.iris.importSettings.tooltip": "Загрузить настройки из файла",
-  "options.iris.exportSettings.tooltip": "Сохранить настройки в файл",
-  "options.iris.setToDefault": "Установить параметр по умолчанию?",
-  "options.iris.profile": "Профиль",
-  "options.iris.profile.custom": "Пользовательский",
-  "options.iris.shadowDistance": "Дальность теней",
-  "options.iris.shadowDistance.enabled": "Позволяет изменять максимальное расстояние видимости теней. Блоки и сущности за его пределами не будут иметь теней. Снижая этот параметр, вы можете значительно улучшить производительность.",
-  "options.iris.shadowDistance.disabled": "Ваши текущие шейдеры уже установили своё расстояние для теней; вы не сможете его изменить.",
-  "options.iris.shadowDistance.sodium_tooltip": "Дальность теней определяет, насколько далеко местность может обрабатываться на этапе просчёта теней. Меньшие значения соответствуют меньшей площади, что улучшает частоту кадров. Этот параметр нельзя изменить для шейдеров, в которых установлено своё расстояние рендеринга теней. Фактическое расстояние рендеринга ограничено дальностью прорисовки.",
+  "options.iris.shadowDistance": "Максимальное расстояние для теней",
+  "options.iris.shadowDistance.enabled": "Позволяет вам изменить максимальное расстояние для теней. Блоки и существа за этим расстоянием не будут иметь теней. Снижая этот параметр, вы можете кардинально улучшить производительность.",
+  "options.iris.shadowDistance.disabled": "Ваши текущие шейдеры уже установили своё расстояние для теней; вы не сможете её изменить.",
   
   "pack.iris.select.title": "Выберите",
-  "pack.iris.configure.title": "Настроить",
-  "pack.iris.list.label": "+ Перетащите шейдер для добавления",
-  
-  "label.iris.true": "Вкл",
-  "label.iris.false": "Выкл"
+  "pack.iris.list.label": "+ Перетащите шейдер для добавления"
 }
