--- a/src/main/resources/assets/iris/lang/sk_sk.json
+++ b/src/main/resources/assets/iris/lang/sk_sk.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "Obnoviť tieňovače",
   "iris.keybind.shaderPackSelection": "Výber tieňovačov",
   "iris.keybind.toggleShaders": "Prepnúť tieňovače",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Nepodarilo sa obnoviť tieňovače! Dôvod: %s",
   "iris.shaders.toggled.failure": "Nepodarilo sa prepnúť tieňovače! Dôvod: %s",
-  "iris.sodium.failure.title": "Iris sa nepodarilo načítať!",
-  "iris.sodium.failure.download": "Stiahnuť Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris potrebuje Sodium pre dobrý výkon, ale Sodium nie je nainštalovaný. Prosím, stiahnite si Sodium, dajte ho do priečinka módov a reštartujte hru.",
-  "iris.sodium.failure.reason.incompatible": "Iris potrebuje Sodium pre dobrý výkon, ale máte zlú verziu Sodium. Prosím, stiahnite si správnu verziu Sodium, dajte ho do priečinka módov, odstráňte zlú verziu a reštartujte hru.",
+  "iris.sodium.failure.title": "Oculus sa nepodarilo načítať!",
+  "iris.sodium.failure.download": "Stiahnuť Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus potrebuje Rubidium pre dobrý výkon, ale Rubidium nie je nainštalovaný. Prosím, stiahnite si Rubidium, dajte ho do priečinka módov a reštartujte hru.",
+  "iris.sodium.failure.reason.incompatible": "Oculus potrebuje Rubidium pre dobrý výkon, ale máte zlú verziu Rubidium. Prosím, stiahnite si správnu verziu Rubidium, dajte ho do priečinka módov, odstráňte zlú verziu a reštartujte hru.",
 
   "options.iris.apply": "Aplikovať",
   "options.iris.refresh": "Obnoviť",
