--- a/src/main/resources/assets/iris/lang/tr_tr.json
+++ b/src/main/resources/assets/iris/lang/tr_tr.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "Shaderları Yenile",
   "iris.keybind.shaderPackSelection": "Shader Paket Seçim Ekranı",
   "iris.keybind.toggleShaders": "Shaderları Aç/Kapa",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Shaderları yenileme başarısız! Sebep: %s",
   "iris.shaders.toggled.failure": "Shaderları açma/kapama başarısız! Sebep: %s",
-  "iris.sodium.failure.title": "Iris yüklenilemedi!",
-  "iris.sodium.failure.download": "Sodium'u İndir",
-  "iris.sodium.failure.reason.notFound": "İyi performans için Iris'e Sodium gerek, ancak kurulu değil. Lütfen Sodium'u indir ve modlar klasörüne yerleştirip oyunu yeniden başlat.",
-  "iris.sodium.failure.reason.incompatible": "İyi performans için Iris'e Sodium gerek, ancak uyumsuz bir sürüm bulundu. Lütfen Sodium'un uygun sürümünü indir, modlar klasörüne yerleştir, uyumsuz sürümü kaldır ve oyunu yeniden başlat.",
+  "iris.sodium.failure.title": "Oculus yüklenilemedi!",
+  "iris.sodium.failure.download": "Rubidium'u İndir",
+  "iris.sodium.failure.reason.notFound": "İyi performans için Oculus'e Rubidium gerek, ancak kurulu değil. Lütfen Rubidium'u indir ve modlar klasörüne yerleştirip oyunu yeniden başlat.",
+  "iris.sodium.failure.reason.incompatible": "İyi performans için Oculus'e Rubidium gerek, ancak uyumsuz bir sürüm bulundu. Lütfen Rubidium'un uygun sürümünü indir, modlar klasörüne yerleştir, uyumsuz sürümü kaldır ve oyunu yeniden başlat.",
 
   "options.iris.apply": "Uygula",
   "options.iris.refresh": "Yenile",
