--- a/src/main/resources/assets/iris/lang/zh_tw.json
+++ b/src/main/resources/assets/iris/lang/zh_tw.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "重新載入光影",
   "iris.keybind.shaderPackSelection": "光影包選擇畫面",
   "iris.keybind.toggleShaders": "光影開關",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "無法重新載入光影！原因：%s",
   "iris.shaders.toggled.failure": "無法使用光影！原因：%s",
-  "iris.sodium.failure.title": "無法載入 Iris！",
-  "iris.sodium.failure.download": "下載 Sodium",
-  "iris.sodium.failure.reason.notFound": "為了讓 Iris 有良好的效能表現，您需要安裝 Sodium。請先下載它、將它存放於模組資料夾後重新啟動遊戲。",
-  "iris.sodium.failure.reason.incompatible": "為了讓 Iris 有良好的效能表現，您需要安裝版本相容的 Sodium。請先下載正確的版本、將它存放於模組資料夾、移除不正確的版本後重新啟動遊戲。",
+  "iris.sodium.failure.title": "無法載入 Oculus！",
+  "iris.sodium.failure.download": "下載 Rubidium",
+  "iris.sodium.failure.reason.notFound": "為了讓 Oculus 有良好的效能表現，您需要安裝 Rubidium。請先下載它、將它存放於模組資料夾後重新啟動遊戲。",
+  "iris.sodium.failure.reason.incompatible": "為了讓 Oculus 有良好的效能表現，您需要安裝版本相容的 Rubidium。請先下載正確的版本、將它存放於模組資料夾、移除不正確的版本後重新啟動遊戲。",
 
   "options.iris.apply": "套用",
   "options.iris.refresh": "重新整理",
