--- a/src/main/resources/assets/iris/lang/et_ee.json
+++ b/src/main/resources/assets/iris/lang/et_ee.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "Laadi varjutajad uuesti",
   "iris.keybind.shaderPackSelection": "Varjutajapaki valikukuva",
   "iris.keybind.toggleShaders": "Lülita varjutajad sisse/välja",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Varjutajate taaslaadimine ebaõnnestus! Põhjus: %s",
   "iris.shaders.toggled.failure": "Varjutajate lülitamine ebaõnnestus! Põhjus: %s",
-  "iris.sodium.failure.title": "Irise laadimine ebaõnnestus!",
-  "iris.sodium.failure.download": "Laadi Sodium alla",
-  "iris.sodium.failure.reason.notFound": "Iris vajab hea jõudluse saavutamiseks Sodiumi, ent Sodium ei ole paigaldatud. Palun laadi Sodium alla, aseta see oma mods kausta ning taaskäivita mäng.",
-  "iris.sodium.failure.reason.incompatible": "Iris vajab hea jõudluse saavutamiseks Sodiumi, ent leiti ühildumatu Sodiumi versioon. Palun laadi sobiv Sodiumi versioon alla, aseta see oma mods kausta, kustuta sobimatu versioon ning taaskäivita mäng.",
+  "iris.sodium.failure.title": "Oculuse laadimine ebaõnnestus!",
+  "iris.sodium.failure.download": "Laadi Rubidium alla",
+  "iris.sodium.failure.reason.notFound": "Oculus vajab hea jõudluse saavutamiseks Rubidiumi, ent Rubidium ei ole paigaldatud. Palun laadi Rubidium alla, aseta see oma mods kausta ning taaskäivita mäng.",
+  "iris.sodium.failure.reason.incompatible": "Oculus vajab hea jõudluse saavutamiseks Rubidiumi, ent leiti ühildumatu Rubidiumi versioon. Palun laadi sobiv Rubidiumi versioon alla, aseta see oma mods kausta, kustuta sobimatu versioon ning taaskäivita mäng.",
   
   "options.iris.apply": "Rakenda",
   "options.iris.refresh": "Värskenda",
