--- a/src/main/resources/assets/iris/lang/pl_pl.json
+++ b/src/main/resources/assets/iris/lang/pl_pl.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "Przeładuj Shadery",
   "iris.keybind.shaderPackSelection": "Ekran wyboru z Shaderami",
   "iris.keybind.toggleShaders": "Przełącz Shadery",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Nie udało się przeładować Shaderów! Powód: %s",
   "iris.shaders.toggled.failure": "Nie udało się przełączyć Shaderów! Powód: %s",
-  "iris.sodium.failure.title": "Iris nie udało się załadować!",
-  "iris.sodium.failure.download": "Pobierz Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris wymaga Sodium dla poprawnego działania, a Sodium nie jest zainstalowane. Proszę pobrać Sodium, umieścić go w folderze mods i ponownie uruchomić grę.",
-  "iris.sodium.failure.reason.incompatible": "Iris wymaga Sodium dla poprawnego działania, znaleziono niekompatybilną wersję Sodium. Proszę pobrać właściwą wersję Sodium, umieścić ją w folderze mods oraz usunąć niekompatybilną wersję i ponownie uruchomić grę.",
+  "iris.sodium.failure.title": "Oculus nie udało się załadować!",
+  "iris.sodium.failure.download": "Pobierz Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus wymaga Rubidium dla poprawnego działania, a Rubidium nie jest zainstalowane. Proszę pobrać Rubidium, umieścić go w folderze mods i ponownie uruchomić grę.",
+  "iris.sodium.failure.reason.incompatible": "Oculus wymaga Rubidium dla poprawnego działania, znaleziono niekompatybilną wersję Rubidium. Proszę pobrać właściwą wersję Rubidium, umieścić ją w folderze mods oraz usunąć niekompatybilną wersję i ponownie uruchomić grę.",
 
   "options.iris.apply": "Zastosuj",
   "options.iris.refresh": "Odśwież",
