--- a/src/main/resources/assets/iris/lang/zh_cn.json
+++ b/src/main/resources/assets/iris/lang/zh_cn.json
@@ -4,13 +4,13 @@
   "iris.keybind.reload": "重新加载光影",
   "iris.keybind.shaderPackSelection": "光影包选择界面",
   "iris.keybind.toggleShaders": "开关光影",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "重新加载光影失败！原因：%s",
   "iris.shaders.toggled.failure": "切换光影失败！原因：%s",
-  "iris.sodium.failure.title": "Iris 加载失败！",
-  "iris.sodium.failure.download": "下载 Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris 需要 Sodium 来提供更好的性能，但 Sodium 还没有安装。请下载 Sodium，并把它放到 mods 文件夹中，然后重新启动游戏。",
-  "iris.sodium.failure.reason.incompatible": "Iris 需要 Sodium 来提供更好的性能，但不兼容已安装的 Sodium 版本。请下载 Sodium 的正确版本，把它放到 mods 文件夹中，移除错误的版本，然后重新启动游戏。",
+  "iris.sodium.failure.title": "Oculus 加载失败！",
+  "iris.sodium.failure.download": "下载 Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus 需要 Rubidium 来提供更好的性能，但 Rubidium 还没有安装。请下载 Rubidium，并把它放到 mods 文件夹中，然后重新启动游戏。",
+  "iris.sodium.failure.reason.incompatible": "Oculus 需要 Rubidium 来提供更好的性能，但不兼容已安装的 Rubidium 版本。请下载 Rubidium 的正确版本，把它放到 mods 文件夹中，移除错误的版本，然后重新启动游戏。",
 
   "options.iris.apply": "应用",
   "options.iris.refresh": "刷新",
