--- a/src/main/resources/assets/iris/lang/en_ud.json
+++ b/src/main/resources/assets/iris/lang/en_ud.json
@@ -9,13 +9,13 @@
   "iris.keybind.reload": "sɹǝpɐɥS pɐoןǝᴚ",
   "iris.keybind.shaderPackSelection": "uǝǝɹɔS uoᴉʇɔǝןǝS ʞɔɐdɹǝpɐɥS",
   "iris.keybind.toggleShaders": "sɹǝpɐɥS ǝןƃƃo⊥",
-  "iris.keybinds": "sᴉɹI",
+  "iris.keybinds": "snlnɔo",
   "iris.shaders.reloaded.failure": "%s :uosɐǝᴚ ¡sɹǝpɐɥs pɐoןǝɹ oʇ pǝןᴉɐℲ",
   "iris.shaders.toggled.failure": "%s :uosɐǝᴚ ¡sɹǝpɐɥs ǝןƃƃoʇ oʇ pǝןᴉɐℲ",
-  "iris.sodium.failure.title": "¡pɐoן oʇ pǝןᴉɐɟ sᴉɹI",
-  "iris.sodium.failure.download": "Download Sodium",
-  "iris.sodium.failure.reason.notFound": "˙ǝɯɐƃ ǝɥʇ ɥɔunɐן-ǝɹ puɐ ´ɹǝpןoɟ spoɯ ɹnoʎ uᴉ ʇᴉ ǝɔɐןd ´ɯnᴉpoS pɐoןuʍop ǝsɐǝןԀ ˙pǝןןɐʇsuᴉ ʇou sᴉ ɯnᴉpoS ʇnq ´ǝɔuɐɯɹoɟɹǝd pooƃ ɹoɟ ɯnᴉpoS sǝɹᴉnbǝɹ sᴉɹI",
-  "iris.sodium.failure.reason.incompatible": "˙ǝɯɐƃ ǝɥʇ ɥɔunɐן-ǝɹ puɐ ´uoᴉsɹǝʌ ʇɔǝɹɹoɔuᴉ ǝɥʇ ǝʌoɯǝɹ ´ɹǝpןoɟ spoɯ ɹnoʎ uᴉ ʇᴉ ǝɔɐןd ´ɯnᴉpoS ɟo uoᴉsɹǝʌ ʇɔǝɹɹoɔ ǝɥʇ pɐoןuʍop ǝsɐǝןԀ ˙punoɟ sɐʍ uoᴉsɹǝʌ ǝןqᴉʇɐdɯoɔuᴉ uɐ ʇnq ´ǝɔuɐɯɹoɟɹǝd pooƃ ɹoɟ ɯnᴉpoS sǝɹᴉnbǝɹ sᴉɹI",
+  "iris.sodium.failure.title": "¡pɐoן oʇ pǝןᴉɐɟ snlnɔo",
+  "iris.sodium.failure.download": "Download Rubidium",
+  "iris.sodium.failure.reason.notFound": "˙ǝɯɐƃ ǝɥʇ ɥɔunɐן-ǝɹ puɐ ´ɹǝpןoɟ spoɯ ɹnoʎ uᴉ ʇᴉ ǝɔɐןd ´ɯnıpıqnɹ pɐoןuʍop ǝsɐǝןԀ ˙pǝןןɐʇsuᴉ ʇou sᴉ ɯnıpıqnɹ ʇnq ´ǝɔuɐɯɹoɟɹǝd pooƃ ɹoɟ ɯnıpıqnɹ sǝɹᴉnbǝɹ snlnɔo",
+  "iris.sodium.failure.reason.incompatible": "˙ǝɯɐƃ ǝɥʇ ɥɔunɐן-ǝɹ puɐ ´uoᴉsɹǝʌ ʇɔǝɹɹoɔuᴉ ǝɥʇ ǝʌoɯǝɹ ´ɹǝpןoɟ spoɯ ɹnoʎ uᴉ ʇᴉ ǝɔɐןd ´ɯnıpıqnɹ ɟo uoᴉsɹǝʌ ʇɔǝɹɹoɔ ǝɥʇ pɐoןuʍop ǝsɐǝןԀ ˙punoɟ sɐʍ uoᴉsɹǝʌ ǝןqᴉʇɐdɯoɔuᴉ uɐ ʇnq ´ǝɔuɐɯɹoɟɹǝd pooƃ ɹoɟ ɯnıpıqnɹ sǝɹᴉnbǝɹ snlnɔo",
 
   "options.iris.apply": "ʎןdd∀",
   "options.iris.refresh": "ɥsǝɹɟǝᴚ",
