--- a/src/main/resources/assets/iris/lang/es_es.json
+++ b/src/main/resources/assets/iris/lang/es_es.json
@@ -13,12 +13,12 @@
   "iris.shaders.reloaded.failure": "¡Error al recargar los Shaders! Razón: %s",
 
   "iris.shaders.toggled.failure": "¡Error al activar shaders! Razón: %s",
-  "iris.sodium.failure.title": "¡Iris no pudo iniciarse!",
-  "iris.sodium.failure.download": "Descarga Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris necesita Sodium para obtener un buen rendimiento, pero no está instalado. Por favor descarga Sodium, ponlo en tu carpeta de mods, y arranca el juego de nuevo.",
-  "iris.sodium.failure.reason.incompatible": "Iris necesita Sodium para obtener un buen rendimiento, pero se encontró una versión incompatible. Por favor descarga la versión correcta de Sodium, ponla en tu carpeta de mods, quita la versión incorrecta, y arranca el juego de nuevo.",
-  "iris.unsupported.irisorpc": "Iris o tu PC",
-  "iris.unsupported.iris": "Iris",
+  "iris.sodium.failure.title": "¡Oculus no pudo iniciarse!",
+  "iris.sodium.failure.download": "Descarga Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus necesita Rubidium para obtener un buen rendimiento, pero no está instalado. Por favor descarga Rubidium, ponlo en tu carpeta de mods, y arranca el juego de nuevo.",
+  "iris.sodium.failure.reason.incompatible": "Oculus necesita Rubidium para obtener un buen rendimiento, pero se encontró una versión incompatible. Por favor descarga la versión correcta de Rubidium, ponla en tu carpeta de mods, quita la versión incorrecta, y arranca el juego de nuevo.",
+  "iris.unsupported.irisorpc": "Oculus o tu PC",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "tu PC",
   "iris.unsupported.pack": "¡Shader incompatible!",
   "iris.unsupported.pack.description": "El Shader Pack que estás intentando cargar contiene características no soportadas por %s. Por favor, prueba otro pack. Lista %s",
