--- a/src/main/resources/assets/iris/lang/hu_hu.json
+++ b/src/main/resources/assets/iris/lang/hu_hu.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "Shader-ek újratöltése",
   "iris.keybind.shaderPackSelection": "Shader Pack választó képernyő",
   "iris.keybind.toggleShaders": "Shader-ek váltása",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Nem sikerült a shader-ek újratöltése! A hiba oka: %s",
   "iris.shaders.toggled.failure": "Nem sikerült a shader-eket bekapcsolni! A hiba oka: %s",
-  "iris.sodium.failure.title": "Az Iris nem tudott betöltődni!",
-  "iris.sodium.failure.download": "Töltsd le a Sodium modot",
-  "iris.sodium.failure.reason.notFound": "Az Iris-nak szüksége van a Sodium modra a megfelelő teljesítményhez, de a Sodium mod nincs telepítve.\nKérlek töltsd le a Sodium modot, helyezd a mods mappába, és indítsd újra a játékot.",
-  "iris.sodium.failure.reason.incompatible": "Az Iris-nak szüksége van a Sodium modra a megfelelő teljesítményhez, de a Sodium modnak nem a megfelelő verziója van feltelepítve.\nKérlek töltsd le a helyes verziót, majd helyezd a mods mappába és törölj minden más verziót, végük indítsd újra a játékot.",
+  "iris.sodium.failure.title": "Az Oculus nem tudott betöltődni!",
+  "iris.sodium.failure.download": "Töltsd le a Rubidium modot",
+  "iris.sodium.failure.reason.notFound": "Az Oculus-nak szüksége van a Rubidium modra a megfelelő teljesítményhez, de a Rubidium mod nincs telepítve.\nKérlek töltsd le a Rubidium modot, helyezd a mods mappába, és indítsd újra a játékot.",
+  "iris.sodium.failure.reason.incompatible": "Az Oculus-nak szüksége van a Rubidium modra a megfelelő teljesítményhez, de a Rubidium modnak nem a megfelelő verziója van feltelepítve.\nKérlek töltsd le a helyes verziót, majd helyezd a mods mappába és törölj minden más verziót, végük indítsd újra a játékot.",
   "iris.nec.failure.title": "[%s] Not Enough Crashes észlelve!",
   "iris.nec.failure.description": "A Not Enough Crashes súlyosan rongálhatja a játékot, ezentúé nem ad pontos részleteket a hibákról.\nJó alternatívák a MixinTrace és a Crafty Crashes, ezek megbízhatóan tudják elemezni a hiba forrását.",
-  "iris.unsupported.irisorpc": "Iris vagy a PC-d",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus vagy a PC-d",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "a PC-d",
   "iris.unsupported.pack": "Ez a Shader Pack nem kompatibilis!",
   "iris.unsupported.pack.description": "A Shader Pack amit szeretnél használni, %s által nem támogatott tulajdonságokat próbál betölteni. Kérlek prábálj egy másik packot. Lista %s",
