--- a/src/main/resources/assets/iris/lang/ja_jp.json
+++ b/src/main/resources/assets/iris/lang/ja_jp.json
@@ -9,15 +9,15 @@
   "iris.keybind.reload": "シェーダーを再読み込み",
   "iris.keybind.shaderPackSelection": "シェーダーパック選択画面",
   "iris.keybind.toggleShaders": "シェーダーを切り替え",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "シェーダーの再読み込みに失敗しました！ 理由: %s",
   "iris.shaders.toggled.failure": "シェーダーの切り替えに失敗しました！ 理由: %s",
-  "iris.sodium.failure.title": "Irisの読み込みに失敗しました！",
-  "iris.sodium.failure.download": "Sodiumをダウンロード",
-  "iris.sodium.failure.reason.notFound": "パフォーマンス向上のため、Irisを使用するにはSodiumが必要です。 Sodiumをダウンロードし、modsフォルダーに導入してから、ゲームを再起動してください。",
-  "iris.sodium.failure.reason.incompatible": "互換性のないバージョンのSodiumが検出されました。 対応しているバージョンのSodiumをダウンロードし、modsフォルダーに導入してから、ゲームを再起動してください。",
-  "iris.unsupported.irisorpc": "Irisまたはお使いのコンピューター",
-  "iris.unsupported.iris": "Iris",
+  "iris.sodium.failure.title": "Oculusの読み込みに失敗しました！",
+  "iris.sodium.failure.download": "Rubidiumをダウンロード",
+  "iris.sodium.failure.reason.notFound": "パフォーマンス向上のため、Oculusを使用するにはRubidiumが必要です。 Rubidiumをダウンロードし、modsフォルダーに導入してから、ゲームを再起動してください。",
+  "iris.sodium.failure.reason.incompatible": "互換性のないバージョンのRubidiumが検出されました。 対応しているバージョンのRubidiumをダウンロードし、modsフォルダーに導入してから、ゲームを再起動してください。",
+  "iris.unsupported.irisorpc": "Oculusまたはお使いのコンピューター",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "お使いのコンピューター",
   "iris.unsupported.pack": "シェーダーパックが非対応です！",
   "iris.unsupported.pack.description": "読み込もうとしているシェーダーパックには、%sで非対応の機能が含まれています。 他のシェーダーパックをご使用ください。 非対応の機能: %s",
