--- a/src/main/resources/assets/iris/lang/pl_pl.json
+++ b/src/main/resources/assets/iris/lang/pl_pl.json
@@ -9,13 +9,13 @@
   "iris.keybind.reload": "Przeładuj Shadery",
   "iris.keybind.shaderPackSelection": "Ekran wyboru z Shaderami",
   "iris.keybind.toggleShaders": "Przełącz Shadery",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Nie udało się przeładować Shaderów! Powód: %s",
   "iris.shaders.toggled.failure": "Nie udało się przełączyć Shaderów! Powód: %s",
-  "iris.sodium.failure.title": "Iris: Nie udało się załadować!",
-  "iris.sodium.failure.download": "Pobierz Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris wymaga Sodium dla poprawnego działania, a Sodium nie jest zainstalowane. Pobierz właściwą wersję Sodium, umieść ją w folderze mods i ponownie uruchom grę.",
-  "iris.sodium.failure.reason.incompatible": "Iris wymaga Sodium dla poprawnego działania. Znaleziono niekompatybilną wersję Sodium. Pobierz właściwą wersję Sodium, umieść ją w folderze mods oraz usuń niekompatybilną wersję i ponownie uruchom grę.",
+  "iris.sodium.failure.title": "Oculus: Nie udało się załadować!",
+  "iris.sodium.failure.download": "Pobierz Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus wymaga Rubidium dla poprawnego działania, a Rubidium nie jest zainstalowane. Pobierz właściwą wersję Rubidium, umieść ją w folderze mods i ponownie uruchom grę.",
+  "iris.sodium.failure.reason.incompatible": "Oculus wymaga Rubidium dla poprawnego działania. Znaleziono niekompatybilną wersję Rubidium. Pobierz właściwą wersję Rubidium, umieść ją w folderze mods oraz usuń niekompatybilną wersję i ponownie uruchom grę.",
 
   "options.iris.apply": "Zastosuj",
   "options.iris.refresh": "Odśwież",
