--- a/src/main/resources/assets/iris/lang/pt_br.json
+++ b/src/main/resources/assets/iris/lang/pt_br.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "Recarregar sombreadores",
   "iris.keybind.shaderPackSelection": "Abrir/Fechar tela de pacotes de sombreadores",
   "iris.keybind.toggleShaders": "Alternar sombreadores",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Falha ao recarregar sombreadores! Motivo: %s",
   "iris.shaders.toggled.failure": "Falha ao alternar sombreadores! Motivo: %s",
-  "iris.sodium.failure.title": "Iris falhou!",
-  "iris.sodium.failure.download": "Baixar Sodium",
-  "iris.sodium.failure.reason.notFound": "O Iris requer o Sodium para um bom desempenho, mas o Sodium não está instalado. Instale-o, coloque-o na pasta de mods e inicie o jogo.",
-  "iris.sodium.failure.reason.incompatible": "O Iris requer o Sodium para um bom desempenho, mas uma versão incompatível dele foi encontrada. Instale a versão correta, coloque-a na pasta de mods, remova a versão incorreta e inicie o jogo.",
+  "iris.sodium.failure.title": "Oculus falhou!",
+  "iris.sodium.failure.download": "Baixar Rubidium",
+  "iris.sodium.failure.reason.notFound": "O Oculus requer o Rubidium para um bom desempenho, mas o Rubidium não está instalado. Instale-o, coloque-o na pasta de mods e inicie o jogo.",
+  "iris.sodium.failure.reason.incompatible": "O Oculus requer o Rubidium para um bom desempenho, mas uma versão incompatível dele foi encontrada. Instale a versão correta, coloque-a na pasta de mods, remova a versão incorreta e inicie o jogo.",
   "iris.nec.failure.title": "[%s] Not Enough Crashes detectado!",
   "iris.nec.failure.description": "O Not Enough Crashes pode quebrar gravemente como o jogo lida com os interrompimentos e não fornece resultados precisos.\nBoas alternativas são MixinTrace e Crafty Crashes, que pode identificar a causa de uma falha de forma mais confiável e não coloca o jogo em um estado inválido.",
-  "iris.unsupported.irisorpc": "Iris ou seu computador",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus ou seu computador",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "seu computador",
   "iris.unsupported.pack": "Sombreadores incompatíveis!",
   "iris.unsupported.pack.description": "Este pacote de sombreadores possui recursos não suportados pelo %s, tente outro pacote. Lista: %s",
