--- a/src/main/resources/assets/iris/lang/uk_ua.json
+++ b/src/main/resources/assets/iris/lang/uk_ua.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "Перезавантажити шейдери",
   "iris.keybind.shaderPackSelection": "Екран вибору пакету шейдерів",
   "iris.keybind.toggleShaders": "Перемкнути шейдери",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Не вдалося перезавантажити шейдери! Причина: %s",
   "iris.shaders.toggled.failure": "Не вдалося перемкнути шейдери! Причина: %s",
-  "iris.sodium.failure.title": "Iris не вдалося завантажити!",
-  "iris.sodium.failure.download": "Завантажити Sodium",
-  "iris.sodium.failure.reason.notFound": "Для гарної роботи Iris потрібен Sodium, але Sodium не встановлено. Будь ласка, завантажте Sodium, помістіть його в папку mods і повторно запустіть гру.",
-  "iris.sodium.failure.reason.incompatible": "Для гарної роботи Iris потрібен Sodium, але була знайдена несумісна версія. Будь ласка, завантажте правильну версію Sodium, помістіть її в папку mods, видаліть неправильну версію та перезапустіть гру.",
+  "iris.sodium.failure.title": "Oculus не вдалося завантажити!",
+  "iris.sodium.failure.download": "Завантажити Rubidium",
+  "iris.sodium.failure.reason.notFound": "Для гарної роботи Oculus потрібен Rubidium, але Rubidium не встановлено. Будь ласка, завантажте Rubidium, помістіть його в папку mods і повторно запустіть гру.",
+  "iris.sodium.failure.reason.incompatible": "Для гарної роботи Oculus потрібен Rubidium, але була знайдена несумісна версія. Будь ласка, завантажте правильну версію Rubidium, помістіть її в папку mods, видаліть неправильну версію та перезапустіть гру.",
   "iris.nec.failure.title": "[%s] Not Enough Crashes виявлено!",
   "iris.nec.failure.description": "Not Enough Crashes може серйозно поламати гру під час обробки збоїв, та не дає точних результатів.\nХорошими альтернативами є MixinTrace і Crafty Crashes, які можуть надійніше визначити причину збою та не переводять гру в недійсний стан.",
-  "iris.unsupported.irisorpc": "Iris або твій ПК",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus або твій ПК",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "твій ПК",
   "iris.unsupported.pack": "Пакет шейдерів несумісний!",
   "iris.unsupported.pack.description": "Пакет шейдерів, який ви намагаєтеся завантажити, містить функції, які не підтримує %s. Будь ласка, спробуйте інший пакет. Список %s",
