--- a/src/main/resources/assets/iris/lang/de_de.json
+++ b/src/main/resources/assets/iris/lang/de_de.json
@@ -11,21 +11,21 @@
   "iris.keybind.reload": "Shader neu laden",
   "iris.keybind.shaderPackSelection": "Shader-Auswahlbildschirm",
   "iris.keybind.toggleShaders": "Shader umschalten",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   
   "iris.shaders.reloaded.failure": "Shader konnte nicht neu geladen werden! Grund: %s",
   "iris.shaders.toggled.failure": "Shader konnte nicht umgeschaltet werden! Grund: %s",
   
-  "iris.sodium.failure.title": "Iris konnte nicht geladen werden!",
-  "iris.sodium.failure.download": "Sodium herunterladen",
-  "iris.sodium.failure.reason.notFound": "Iris erfordert Sodium für optimale Leistung, aber Sodium ist nicht installiert. Bitte lade Sodium herunter, füge es deinem Mods-Ordner hinzu und starte das Spiel neu.",
-  "iris.sodium.failure.reason.incompatible": "Iris erfordert Sodium für optimale Leistung, aber es wurde eine inkompatible Version gefunden. Bitte lade die passende Version von Sodium herunter, füge sie deinem Mods-Ordner hinzu, entferne die falsche Version und starte das Spiel neu.",
+  "iris.sodium.failure.title": "Oculus konnte nicht geladen werden!",
+  "iris.sodium.failure.download": "Rubidium herunterladen",
+  "iris.sodium.failure.reason.notFound": "Oculus erfordert Rubidium für optimale Leistung, aber Rubidium ist nicht installiert. Bitte lade Rubidium herunter, füge es deinem Mods-Ordner hinzu und starte das Spiel neu.",
+  "iris.sodium.failure.reason.incompatible": "Oculus erfordert Rubidium für optimale Leistung, aber es wurde eine inkompatible Version gefunden. Bitte lade die passende Version von Rubidium herunter, füge sie deinem Mods-Ordner hinzu, entferne die falsche Version und starte das Spiel neu.",
   
   "iris.nec.failure.title": "[%s] Not Enough Crashes erkannt!",
   "iris.nec.failure.description": "Not Enough Crashes kann das Spiel bei der Behandlung von Abstürzen stark beeinträchtigen und liefert keine genauen Ergebnisse.\nGute Alternativen sind MixinTrace und Crafty Crashes, die die Ursache eines Absturzes zuverlässiger identifizieren können und das Spiel nicht in einen fehlerhaften Zustand versetzen.",
   
-  "iris.unsupported.irisorpc": "Iris oder diesem Computer",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus oder diesem Computer",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "diesem Computer",
   "iris.unsupported.pack": "Shaderpaket inkompatibel!",
   "iris.unsupported.pack.description": "Dieses Shaderpaket enthält Funktionen, die von %s nicht unterstützt werden%s Bitte versuche ein anderes Paket.",
