--- a/src/main/resources/assets/iris/lang/fi_fi.json
+++ b/src/main/resources/assets/iris/lang/fi_fi.json
@@ -9,13 +9,13 @@
   "iris.keybind.reload": "Uudelleenlataa shaderit",
   "iris.keybind.shaderPackSelection": "Shader-paketin valitsemisruutu",
   "iris.keybind.toggleShaders": "Ota shaderit käyttöön / pois käytöstä",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Shaderien lataus epäonnistui! Syy: %s",
   "iris.shaders.toggled.failure": "Shaderien käyttöönotto epäonnistui! Syy: %s",
   "iris.sodium.failure.title": "Iriksen lataus epäonnistui!",
-  "iris.sodium.failure.download": "Lataa Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris vaatii Sodiumin hyvän suorituskyvyn takaamiseksi, mutta Sodiumia ei ole asennettu. Lataa Sodium, laita se modit-kansioosi, ja käynnistä pelisi uudelleen.",
-  "iris.sodium.failure.reason.incompatible": "Iris vaatii Sodiumin hyvän suorituskyvyn takaamiseksi, mutta Sodium versiosi on yhteensopimaton. Lataa yhteensopiva Sodium versio, laita se modit-kansioosi ja poista yhteensopimaton versio, käynnistä sitten pelisi uudelleen.",
+  "iris.sodium.failure.download": "Lataa Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus vaatii Rubidiumin hyvän suorituskyvyn takaamiseksi, mutta Rubidiumia ei ole asennettu. Lataa Rubidium, laita se modit-kansioosi, ja käynnistä pelisi uudelleen.",
+  "iris.sodium.failure.reason.incompatible": "Oculus vaatii Rubidiumin hyvän suorituskyvyn takaamiseksi, mutta Rubidium versiosi on yhteensopimaton. Lataa yhteensopiva Rubidium versio, laita se modit-kansioosi ja poista yhteensopimaton versio, käynnistä sitten pelisi uudelleen.",
   
   "options.iris.apply": "Ota käyttöön",
   "options.iris.refresh": "Lataa uudelleen",
