--- a/src/main/resources/assets/iris/lang/it_it.json
+++ b/src/main/resources/assets/iris/lang/it_it.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "Riavvia Shaders",
   "iris.keybind.shaderPackSelection": "Schermata di selezione Pacchetti di Shaders",
   "iris.keybind.toggleShaders": "Attiva/Disattiva Shaders",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Impossibile ricaricare le shaders! Motivo: %s",
   "iris.shaders.toggled.failure": "Impossibile attivare le shaders! Motico: %s",
-  "iris.sodium.failure.title": "Iris non è riuscito a caricarsi!",
-  "iris.sodium.failure.download": "Scarica Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris ha bisogno di Sodium per una buona performance, ma Sodium non è installato. Per favore scarica Sodium, mettilo nella cartella delle mod e riavvia il gioco.",
-  "iris.sodium.failure.reason.incompatible": "Iris ha bisogno di Sodium per una buona performance, ma una versione incompatibile è stata trovata. Per favore scarica la corretta verisone di Sodium, mettilo nella cartella delle mod, elimina la vecchia versione e riavvia il gioco.",
+  "iris.sodium.failure.title": "Oculus non è riuscito a caricarsi!",
+  "iris.sodium.failure.download": "Scarica Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus ha bisogno di Rubidium per una buona performance, ma Rubidium non è installato. Per favore scarica Rubidium, mettilo nella cartella delle mod e riavvia il gioco.",
+  "iris.sodium.failure.reason.incompatible": "Oculus ha bisogno di Rubidium per una buona performance, ma una versione incompatibile è stata trovata. Per favore scarica la corretta verisone di Rubidium, mettilo nella cartella delle mod, elimina la vecchia versione e riavvia il gioco.",
   "iris.nec.failure.title": "[%s] Not Enough Crashes Trovato!",
   "iris.nec.failure.description": "Not Enough Crashes può rompere il gioco durante i crash e non dà risultati accurati. Buone alternative sono MixinTrace e Crafty Crashes, che possono identificare la causa di un crash meglio e non mettono il gioco in uno stato invalido.",
-  "iris.unsupported.irisorpc": "Iris o il tuo PC",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus o il tuo PC",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "il tuo PC",
   "iris.unsupported.pack": "Pacchetto di Shaders incompatibile!",
   "iris.unsupported.pack.description": "Il pacchetto di shaders che stai cercando di caricare contiene features non supportate da %s. Per favore prova un altro pacchetto. Lista %s",
