--- a/src/main/resources/assets/iris/lang/ko_kr.json
+++ b/src/main/resources/assets/iris/lang/ko_kr.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "셰이더 새로고침",
   "iris.keybind.shaderPackSelection": "셰이더 팩 선택 창",
   "iris.keybind.toggleShaders": "셰이더 전환",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "셰이더를 새로고침하지 못하였습니다: %s",
   "iris.shaders.toggled.failure": "셰이더를 전환하지 못하였습니다: %s",
-  "iris.sodium.failure.title": "Iris를 불러오지 못하였습니다.",
-  "iris.sodium.failure.download": "Sodium 다운로드",
-  "iris.sodium.failure.reason.notFound": "Iris를 최상의 성능으로 쓰기 위한 Sodium이 설치되어 있지 않습니다. Sodium을 내려받아 mods 폴더에 넣어 게임을 다시 실행하십시오.",
-  "iris.sodium.failure.reason.incompatible": "Iris를 최상의 성능으로 쓰기 위한 Sodium의 버전이 호환되지 않습니다. Iris와 맞는 버전의 Sodium을 내려받아 mods 폴더에 넣고, 호환되지 않는 버전의 Sodium을 제거한 뒤 게임을 다시 실행하십시오.",
+  "iris.sodium.failure.title": "Oculus를 불러오지 못하였습니다.",
+  "iris.sodium.failure.download": "Rubidium 다운로드",
+  "iris.sodium.failure.reason.notFound": "Oculus를 최상의 성능으로 쓰기 위한 Rubidium이 설치되어 있지 않습니다. Rubidium을 내려받아 mods 폴더에 넣어 게임을 다시 실행하십시오.",
+  "iris.sodium.failure.reason.incompatible": "Oculus를 최상의 성능으로 쓰기 위한 Rubidium의 버전이 호환되지 않습니다. Oculus와 맞는 버전의 Rubidium을 내려받아 mods 폴더에 넣고, 호환되지 않는 버전의 Rubidium을 제거한 뒤 게임을 다시 실행하십시오.",
   "iris.nec.failure.title": "[%s] Not Enough Crashes 모드가 감지되었습니다.",
   "iris.nec.failure.description": "Not Enough Crashes는 충돌이 처리될 때 게임을 예기치 못하게 중단시킬 수 있으며 정확한 충돌 결과를 표시하지 않습니다.\n이에 대한 좋은 대체재로서, MixinTrace와 Crafty Crashes는 충돌 원인을 보다 안정적으로 식별하며 게임을 중단하지 않습니다.",
-  "iris.unsupported.irisorpc": "Iris 또는 사용자의 PC",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus 또는 사용자의 PC",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "사용자의 PC",
   "iris.unsupported.pack": "셰이더 팩이 호환되지 않습니다.",
   "iris.unsupported.pack.description": "불러오려는 셰이더 팩이 %s에 의해 지원되지 않는 기능을 포함하고 있습니다. 다른 팩으로 다시 시도하십시오. 목록 %s",
