--- a/src/main/resources/assets/iris/lang/lol_us.json
+++ b/src/main/resources/assets/iris/lang/lol_us.json
@@ -4,11 +4,11 @@
   "iris.keybind.reload": "Wewoad shadews",
   "iris.keybind.shaderPackSelection": "Shadewpack sewection scween",
   "iris.keybind.toggleShaders": "Toggwe Shadews",
-  "iris.keybinds": "Iwis",
+  "iris.keybinds": "OcUWUs",
   "iris.shaders.reloaded.failure": "Faiwed to wewoad shadews! Reason: %s",
   "iris.shaders.toggled.failure": "Faiwed to toggwe shadews! Reason: %s",
-  "iris.sodium.failure.title": "Iwis faiwed to woad!",
-  "iris.sodium.failure.reason": "You have Sodium in youw mods fowdew, howevew Iwis incwudes it. Pwease cwose da game, and wemove Sodium from youw mods fowdew.",
+  "iris.sodium.failure.title": "OcUWUs faiwed to woad!",
+  "iris.sodium.failure.reason": "You have Wubidium in youw mods fowdew, howevew OcUWUs incwudes it. Pwease cwose da game, and wemove Wubidium from youw mods fowdew.",
 
   "options.iris.apply": "Appwy",
   "options.iris.refresh": "Refwesh",
