--- a/src/main/resources/assets/iris/lang/ru_ru.json
+++ b/src/main/resources/assets/iris/lang/ru_ru.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "Перезагрузить шейдеры",
   "iris.keybind.shaderPackSelection": "Список наборов шейдеров",
   "iris.keybind.toggleShaders": "Переключить шейдеры",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "Не удалось перезагрузить шейдеры. Причина: %s",
   "iris.shaders.toggled.failure": "Не удалось переключить шейдеры. Причина: %s",
-  "iris.sodium.failure.title": "Не удалось загрузить Iris.",
-  "iris.sodium.failure.download": "Загрузить Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris требует Sodium для лучшей производительности, но Sodium не установлен. Пожалуйста, загрузите Sodium, добавьте его в папку с модами и перезапустите игру.",
-  "iris.sodium.failure.reason.incompatible": "Iris требует Sodium для лучшей производительности, но ваша версия Sodium несовместима. Пожалуйста, загрузите и добавьте в папку с модами подходящую версию Sodium, удалите старую версию и перезапустите игру.",
+  "iris.sodium.failure.title": "Не удалось загрузить Oculus.",
+  "iris.sodium.failure.download": "Загрузить Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus требует Rubidium для лучшей производительности, но Rubidium не установлен. Пожалуйста, загрузите Rubidium, добавьте его в папку с модами и перезапустите игру.",
+  "iris.sodium.failure.reason.incompatible": "Oculus требует Rubidium для лучшей производительности, но ваша версия Rubidium несовместима. Пожалуйста, загрузите и добавьте в папку с модами подходящую версию Rubidium, удалите старую версию и перезапустите игру.",
   "iris.nec.failure.title": "[%s] обнаружен Not Enough Crashes!",
   "iris.nec.failure.description": "Not Enough Crashes может серьёзно сломать игру при обработке сбоев, при этом не давая точных результатов.\nВ качестве альтернатив есть MixinTrace и Crafty Crashes, которые более надёжно определяют причину сбоя и не доводят игру до нестабильного состояния.",
-  "iris.unsupported.irisorpc": "не поддерживает Iris или ваше устройство",
-  "iris.unsupported.iris": "Iris не поддерживает",
+  "iris.unsupported.irisorpc": "не поддерживает Oculus или ваше устройство",
+  "iris.unsupported.iris": "Oculus не поддерживает",
   "iris.unsupported.pc": "ваше устройство не поддерживает",
   "iris.unsupported.pack": "Несовместимый набор шейдеров!",
   "iris.unsupported.pack.description": "Этот набор шейдеров содержит функции, которые %s. Попробуйте другой набор. Несовместимо: %s",
