--- a/src/main/resources/assets/iris/lang/zh_cn.json
+++ b/src/main/resources/assets/iris/lang/zh_cn.json
@@ -9,17 +9,17 @@
   "iris.keybind.reload": "重新加载光影包",
   "iris.keybind.shaderPackSelection": "光影包选择界面",
   "iris.keybind.toggleShaders": "启用/禁用光影",
-  "iris.keybinds": "Iris",
+  "iris.keybinds": "Oculus",
   "iris.shaders.reloaded.failure": "重新加载光影包失败！原因：%s",
   "iris.shaders.toggled.failure": "切换光影包失败！原因：%s",
-  "iris.sodium.failure.title": "Iris 加载失败！",
-  "iris.sodium.failure.download": "下载 Sodium",
-  "iris.sodium.failure.reason.notFound": "Iris 需要 Sodium 来提供更好的性能，但你并没有安装 Sodium。请下载 Sodium，把它放到 mods 文件夹中，并重新启动游戏。",
-  "iris.sodium.failure.reason.incompatible": "Iris 需要 Sodium 来提供更好的性能，但不兼容已安装的 Sodium 版本。请下载正确的 Sodium 版本，把它放到 mods 文件夹中，移除错误的 Sodium 版本，并重新启动游戏。",
+  "iris.sodium.failure.title": "Oculus 加载失败！",
+  "iris.sodium.failure.download": "下载 Rubidium",
+  "iris.sodium.failure.reason.notFound": "Oculus 需要 Rubidium 来提供更好的性能，但你并没有安装 Rubidium。请下载 Rubidium，把它放到 mods 文件夹中，并重新启动游戏。",
+  "iris.sodium.failure.reason.incompatible": "Oculus 需要 Rubidium 来提供更好的性能，但不兼容已安装的 Rubidium 版本。请下载正确的 Rubidium 版本，把它放到 mods 文件夹中，移除错误的 Rubidium 版本，并重新启动游戏。",
   "iris.nec.failure.title": "[%s] 检测到 Not Enough Crashes！",
   "iris.nec.failure.description": "在处理崩溃时，Not Enough Crashes 会严重破坏游戏，而且无法提供准确的结果。\n好的替代品有 MixinTrace 和 Crafty Crashes，它们都可以更准确地识别崩溃原因并且不会使游戏处于无效状态。",
-  "iris.unsupported.irisorpc": "Iris或你的电脑",
-  "iris.unsupported.iris": "Iris",
+  "iris.unsupported.irisorpc": "Oculus或你的电脑",
+  "iris.unsupported.iris": "Oculus",
   "iris.unsupported.pc": "你的电脑",
   "iris.unsupported.pack": "光影包不兼容！",
   "iris.unsupported.pack.description": "你尝试加载的光影包含%s不支持的功能。请尝试其他光影。名单：%s",
